--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,8 +7,6 @@
     }
 
     .button {
-        @apply p-2 text-xs md:text-sm bg-gradient-to-b from-yellow-200 
-        to-yellow-400 border border-yellow-300 rounded-sm focus:outline-none 
-        focus:ring-2 focus:ring-yellow-500 active:from-yellow-500;
+        @apply text-gray-800 cursor-pointer transition duration-200 ease-out hover:shadow-xl rounded-full px-4 py-1 focus:ring-2 active:from-gray-500;
     }
 }
